--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "next": "13.4.4",
     "next-themes": "^0.2.1",
     "postcss": "8.4.24",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "18.2.0",
+    "react-live-clock": "^6.1.15",
     "react-responsive-carousel": "^3.2.23",
     "tailwindcss": "3.3.2"
   }
