--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-live-clock": "^6.1.15",
     "react-responsive-carousel": "^3.2.23",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "typewriter-effect": "^2.21.0"
   }
 }
